--- a/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
+++ b/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
@@ -1,7 +1,7 @@
 .BreadBottom {
     height: 13%;
     width: 80%;
-    background: linear-gradient(#F08E4A, #E27b36);
+    background: linear-gradient(#F08E4A, #e27b36);
     border-radius: 0 0 30px 30px;
     box-shadow: inset -15px 0 #c15711;
     margin: 2% auto;
@@ -13,6 +13,8 @@
     background: linear-gradient(#bc581e, #e27b36);
     border-radius: 50% 50% 0 0;
     box-shadow: inset -15px 0 #c15711;
+    margin: 2% auto;
+    position: relative;
 }
 
 .Seeds1 {
@@ -38,7 +40,7 @@
     border-radius: 40%;
     transform: rotate(60deg);
     box-shadow: inset -1px 2px #c9c9c9;
-}
+  }
 
 .Seeds1:before {
     content: "";
@@ -51,9 +53,9 @@
     border-radius: 40%;
     transform: rotate(60deg);
     box-shadow: inset -1px -3px #c9c9c9;
-}
+  }
 
-.Seeds2 {
+  .Seeds2 {
     width: 10%;
     height: 15%;
     position: absolute;
@@ -63,9 +65,9 @@
     border-radius: 40%;
     transform: rotate(10deg);
     box-shadow: inset -3px 0 #c9c9c9;
-}
+  }
 
-.Seeds2:before {
+  .Seeds2:before {
     content: "";
     width: 100%;
     height: 100%;
@@ -76,7 +78,7 @@
     border-radius: 40%;
     transform: rotate(90deg);
     box-shadow: inset 1px 3px #c9c9c9;
-}
+  }
 
 .Meat {
     width: 80%;
@@ -105,7 +107,6 @@
 .Bacon {
     width: 80%;
     height: 3%;
-    margin: 2% auto;
     background: linear-gradient(#bf3813, #c45e38);
     margin: 2% auto;
 }
